Fixed some unittests